# pysell

./: .gitignore  CHANGELOG  MANIFEST.in  README.md  build-pysell.py  build.js  build.py  build.sh  index.html  llm.md  package.json  pyproject.toml  sell.py  todo.txt
docs/: ex1.html  icon.sh  index.html
examples/: ex1.html  ex1.json  ex1.txt  ex2.txt  sage.txt
examples/DE/: differentialgleichungen.txt  differntialrechnung.txt  folgen-reihen-stetigkeit.txt  funktionen-elementar.txt  funktionen-mehrere-variablen.txt  grundlagen.txt  integralrechnung.txt  komplexe-zahlen.txt  lineare-algebra-1.txt  lineare-algebra-2.txt
pysell/: __init__.py  __main__.py
src/: dom.js  example.js  icons.js  index.js  lang.js  math.js  math_TEST.js
test/: example.json
web/: build.js  index.html  jsconfig.json
web/src/: dom.js  eval.js  ext.js  icons.js  index.js  input.js  lang.js  math.js  math_ODE.js  math_ODE_TEST.js  math_TEST.js  question.js
