[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysell"
version = "1.3.4"
description = "A Python-based Simple E-Learning Language for the Rapid Creation of Interactive and Mobile-Friendly STEM Courses"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Andreas Schwenk", email = "contact@compiler-construction.com" },
]
maintainers = [
    { name = "Andreas Schwenk", email = "contact@compiler-construction.com" },
]
license = { file = "LICENSE" }
keywords = ["dsl", "quiz", "learning", "stem", "teaching", "assessement"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = []
include = ["pysell/*.py"]

[project.scripts]
pysell = "pysell.__main__:main"

[project.urls]
Homepage = "https://pysell.org"
Repository = "https://github.com/andreas-schwenk/pysell"

[tool.hatch.build]
exclude = [
    "platforms/",
    "docs/",
    "img/",
    "web/",
    "build/",
    "examples/",
    "llm.md",
    "build-pysell.py",
    "TODO.txt"
]
